# ProjectTitanium

./: .gitignore  Cargo.toml  README.md  Titanium_Route1.json
_tild_project/: Titanium_DevTown_V01.json  titanium_tileset_V01.json
resources/routes/: titanium_town1_v02.json
resources/tile_sets/: titanium_tileset_v01.json
src/: globs.rs  main.rs  route1.csv  utilities.rs
src/graphics_engine/: frame.rs  mod.rs  player_sheet.rs  renderer.rs  sheet.rs
src/main_state/: draw_debug.rs  game_state.rs  io.rs  mod.rs  ms.rs
src/world/: json_importer.rs  mod.rs  player.rs  route.rs  world.rs
